--- a/package.json
+++ b/package.json
@@ -4,33 +4,9 @@
   "description": "",
   "scripts": {
     "start": "node_modules/.bin/gulp",
-    "test": "node_modules/.bin/gulp test",
-    "karma": "node_modules/.bin/karma start"
+    "test": "node_modules/.bin/gulp test"
   },
   "author": "",
-  "browser": {
-    "jquery": "./node_modules/jquery/dist/jquery.js",
-    "foundation": "./node_modules/foundation/js/foundation/foundation.js",
-    "foundation.interchange": "./node_modules/foundation/js/foundation/foundation.interchange.js"
-  },
-  "browserify": {
-    "transform": [
-      "browserify-shim"
-    ]
-  },
-  "browserify-shim": {
-    "foundation": {
-      "depends": [
-        "jquery:jQuery"
-      ]
-    },
-    "foundation.interchange": {
-      "depends": [
-        "jquery:jQuery",
-        "foundation"
-      ]
-    }
-  },
   "license": "MIT",
   "devDependencies": {
     "babel": "^5.5.5",
@@ -38,10 +14,8 @@
     "babel-runtime": "^5.5.5",
     "babelify": "^6.1.2",
     "browserify": "^10.2.4",
-    "browserify-shim": "^3.8.8",
-    "concurrent-transform": "^1.0.0",
     "del": "^1.2.0",
-    "event-stream": "^3.3.1",
+    "event-stream": "^3.3.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-cached": "^1.1.0",
@@ -68,26 +42,23 @@
     "gulp-webserver": "^0.9.1",
     "jasmine": "^2.3.1",
     "jasmine-core": "^2.3.4",
-    "jquery": "^2.1.4",
     "karma": "^0.12.36",
     "karma-babel-preprocessor": "^5.2.1",
     "karma-browserify": "^4.2.1",
     "karma-coverage": "^0.3.1",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.2.0",
-    "karma-sinon": "^1.0.4",
     "karma-spec-reporter": "0.0.19",
-    "merge-stream": "^0.1.7",
     "phantomjs": "^1.9.17",
     "run-sequence": "^1.1.0",
     "sinon": "^1.14.1",
     "through2": "^0.6.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.2",
-    "yargs": "^3.10.0"
+    "watchify": "^3.2.2"
   },
   "dependencies": {
+    "bootstrap-sass": "^3.3.6",
     "jquery": "^2.1.4",
     "underscore": "^1.8.3"
   }
