--- a/package.json
+++ b/package.json
@@ -18,32 +18,17 @@
     "event-stream": "^3.3.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
-    "gulp-cached": "^1.1.0",
-    "gulp-changed": "^1.2.1",
-    "gulp-clone": "^1.0.0",
-    "gulp-concat": "^2.5.2",
     "gulp-connect": "^2.2.0",
-    "gulp-debug": "^2.0.1",
-    "gulp-eslint": "^0.13.2",
-    "gulp-filter": "^2.0.2",
-    "gulp-if": "^1.2.5",
-    "gulp-insert": "^0.4.0",
     "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-minify-css": "^1.1.6",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
-    "gulp-remember": "^0.3.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-rev": "^4.0.0",
     "gulp-sass": "^2.0.1",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.5",
     "gulp-webserver": "^0.9.1",
     "jasmine": "^2.3.1",
     "jasmine-core": "^2.3.4",
     "karma": "^0.12.36",
-    "karma-babel-preprocessor": "^5.2.1",
     "karma-browserify": "^4.2.1",
     "karma-coverage": "^0.3.1",
     "karma-jasmine": "^0.3.5",
@@ -51,7 +36,6 @@
     "karma-spec-reporter": "0.0.19",
     "phantomjs": "^1.9.17",
     "run-sequence": "^1.1.0",
-    "sinon": "^1.14.1",
     "through2": "^0.6.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
@@ -61,5 +45,8 @@
     "bootstrap-sass": "^3.3.6",
     "jquery": "^2.1.4",
     "underscore": "^1.8.3"
+  },
+  "browserify": {
+    "transform": [["babelify", { "optional": ["runtime"], "blacklist": ["regenerator"] }]]
   }
 }
